# school-search-portal-ai-based

./: .gitignore  README.md
BE/: Dockerfile  pyproject.toml
BE/app/: main.py
BE/app/api/v1/: routes.py
BE/app/core/: config.py  llm.py  qdrant_client.py  redis_client.py
BE/app/models/: schl_models.py
BE/app/schema/: schl_schema.py
BE/app/services/: schl_services.py
docker/: docker-compose.yml
fe/: Dockerfile  next.config.ts  package-lock.json  package.json
fe/src/app/: page.tsx
fe/src/components/ui/: card.tsx  input.tsx
fe/src/hooks/: hukschool.ts
