[project]
name = "schoolsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.3",
    "fastapi[standard]>=0.116.0",
    "openai>=1.93.2",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "ruff>=0.12.2",
    "sqlalchemy>=2.0.41",
]
